[metadata]
name = test_platform_helper
version = 0.0.1
author = chenxu.tian
author_email = 472159011@qq.com
description = test platform backend helper package
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = Sanic
license_files = file: LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires =
    httpx
    sanic[ext]
    aioquic
    wsproto
